fix(GeotagDialog): do not stretch out error banner across the dialog box
The error banner on the GeotagDialog component was modeled after the NotificationBar
component, which stretches across the entire viewport. The error banner stretched
across the entire width of the dialog box. This meant that the "close" button on the
dialog box was placed _on_ the error banner itself, and that caused confusion about
what that close button did. For comparison, the close button on the original
NotificationBar component dismissed the bar itself, not the entire app. So it is
reasonable for a user to suspect that the close button on the GeotagDialog error
banner dismissed the erorr banner, not the dialog box.

By making the error banner not the full width of the dialog, the dialog "close"
button is now outside of the banner, which helps resolve that ambiguity.
The error banner still floats above the map as an important notice for users.

--- a/assets/scripts/dialogs/GeotagDialog.scss
+++ b/assets/scripts/dialogs/GeotagDialog.scss
@@ -1,6 +1,7 @@
 @import "../../styles/variables.scss";
 
 $geotag-dialog-background-color: $off-white;
+$geotag-error-banner-margin: 100px;
 
 .geotag-dialog {
   width: 90vw;
@@ -16,10 +17,24 @@ $geotag-dialog-background-color: $off-white;
 
 .geotag-error-banner {
   /* Very similar to the notification bar banner */
-  padding: 0.85em 2.5em;
+  padding: 0.75em 2.5em;
   text-align: center;
   background-color: $alert-background;
   border-bottom: $alert-border;
+  border-bottom-left-radius: $border-radius-medium;
+  border-bottom-right-radius: $border-radius-medium;
+
+  /* Place error banner above map */
+  position: absolute;
+  top: 0;
+
+  /* Place above leaflet tiles, which have a z-index of 400 */
+  z-index: 500;
+
+  /* Constrain width of banner to allow for zoom widget and close
+     dialog button */
+  width: calc(100% - #{$geotag-error-banner-margin * 2});
+  margin: 0 $geotag-error-banner-margin;
 }
 
 .geotag-input-container {
